solc_mutator_ossfuzz_seed_corpus/test_sol/test_fd4cf080874b3c275fc0f7a6145b4b5f67b2cc0a595c1101a0e2c94d00634bfe_f37126ef0793d74f6531de92632db1f6f803f119_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
  function f0(function (uint104, bool) internal   returns (bytes26, address payable, bytes memory) i0) public   
  {
    (bool l0, bytes memory l1) = address(this).call(bytes("ffffffffffffffffffffffffffffffffffffffffd5"));
    (bool l2, bytes memory l3) = address(this).call(bytes("ffffffffffffffffffffffffffed9ba2df18f0157fc18504c8577f44332b0675abcec384d94db4f953"));
  }
  function f1(bytes11 i0) private    returns(uint128 o0,int248 o1)
  {
    (bool l0, bytes memory l1) = address(this).call(bytes("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"));
  }
  address payable  public s0;
  bool   s1;
  constructor(address payable i0,bool i1) payable  {
    s0 = (i0 = (s0 = payable(address(this))));
    s1 = true;
    unchecked {
      (bool l0, bytes memory l1) = address(this).call(bytes("86e9701fe3fd0f067d39fca680f9de9c7045bd3f5771ffffffffffffffffffffff"));
      (bool l2, bytes memory l3) = address(this).call(bytes("ff9e65a2a756b366f1a27d2058d192e36e7bebf602eb40576238b9dcac7d73f4b2"));
      (bool l4, bytes memory l5) = address(this).call(bytes(string("0000000000000000000000000000000000000000000000004a575591645fcb0140f075b343d57871dd8ef838bf")));
    }
  }
}
pragma solidity >= 0.0.0;
// ----
// TypeError 4103: (su0.sol:28-115): Internal type is not allowed for public or external functions.
